make required changes to get the angular app start

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,1 +1,11 @@
-<my-app>loading...</my-app>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Twitter Manager</title>
+  </head>
+  <body>
+    <my-app></my-app>
+  </body>
+  <script src="main.js" charset="utf-8"></script>
+</html>
